<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A List</string>
    <string name="action_bar_refresh">Refresh</string>
    <string name="title_section1">Add flight</string>
    <string name="title_section2">Flight list</string>
    <string name="title_section3">Section 3</string>\
    <string name="input_hint_confirmation">Confirmation # (eg MU9RMY)</string>
    <string name="input_hint_departure_date">Departure Date</string>
    <string name="input_hint_return_date">Return Date</string>
    <string name="input_hint_departure_time">Departure Time</string>
    <string name="input_hint_return_dtime">Return Time</string>
    <string name="input_hint_lastname">Last Name</string>
    <string name="input_hint_firstname">First Name</string>
    <string name="input_hint_origin_airport">Origin Airport</string>
    <string name="input_hint_destination_airport">Destination Airport</string>
    <string name="title_add_new_flight">Add Flight</string>
    <string name="btn_check_in">Check in</string>
    <string name="entry_added_toast">Ready to check in for flight at %1$s on %2$s</string>
    <string name="entry_added_multiple_toast">Ready to check in for flight at %1$s on %2$s and return at %3$s on %4$s</string>
    <string name="entry_not_added_toast">Could not set checkin alarm: Please enter full name and confirmation code</string>
    <string name="notification_title">Checked in to SouthWest</string>
    <!-- Aditya Joshi checked in to Southwest flight from LAx to LAS with boarding position A1 at gate C3 -->
    <string name="notification_big_text">%1$s %2$s checked in to Southwest flight from %3$s to %4$s with boarding position %5$s at gate %6$s</string>
    <string name="notification_text_small">Boarding Position %s</string>
    <string name="notification_failure_title">Unable to check in</string>
    <string name="notification_failure_text">Unable to check in to a flight. Please check the app</string>
    <string name="notification_has_gate">\u0020at gate %s</string>
    <string name="unable_to_set_timer_toast">Unable to set timer!</string>
    <string name="empty_flight_list">You have no upcoming flights</string>
    <string name="flight_list_origin_to_dest">%1$s → %2$s</string>
    <!-- Name of user first arg is first name, second arg is last name -->
    <string name="flight_list_name">%1$s %2$s</string>
    <!-- Timestamp format for display in flight list; first arg is date/time, second is timezone -->
    <string name="flight_list_timestamp_format">%1$s %2$s</string>
    <!-- time, origin, destination -->
    <string name="flight_detail_dialog_title_not_checked_in">Not checked in to flight at %1$s from %2$s to %3$s.</string>
    <string name="flight_detail_dialog_title_not_checked_in_no_locations">Not checked in to flight at %1$s.</string>
    <string name="flight_detail_dialog_title_auto_checkin_failed">Automatic checkin failed %d times.</string>
    <!-- Not checked in to flight at %1$s from %2$s to %3$s. Automatic checkin failed %d times -->
    <string name="flight_detail_dialog_title_not_checked_in_auto_checkin_failed">%1$s %2$s</string>
    <!-- time, origin, destination, position, gate-->
    <string name="flight_detail_dialog_title_checked_in">Checked in to flight at %1$s from %2$s to %3$s. Your boarding position is %4$s at gate %5$s.</string>
    <string name="flight_detail_dialog_delete_button">Delete flight</string>
    <string name="flight_detail_dialog_force_checkin_button">Check in via browser</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="action_settings">Settings</string>
</resources>
